fix: loading not centered

--- a/pwa/src/styles/main.scss
+++ b/pwa/src/styles/main.scss
@@ -50,8 +50,8 @@ h6 {
 
   > .loading {
     display: inline-block;
-    width: 4rem;
-    height: 4rem;
+    width: 2rem;
+    height: 2rem;
 
     &:after {
       content: '';
